Keep Twelve Data provider compatible with Java 8